test/2/type/poly-multiple-morphs-match.err
test/2/type/poly-multiple-morphs-match.ploy:6:7-8: type error: polymorph alias 'f': multiple morphs of polydef match expected: ()%Int, ()%Str.
  polydef type: Poly<()%Int ()%Str>
  expected type: ()%^2
|   x = f()
        ~
